<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mmlv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/mmlv_tv_moviename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_tv_name"/>
                <TextView
                    android:id="@+id/mmlv_tv_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_tv_release"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/mmlv_tv_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_tv_score"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/mmlv_tv_date_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="watch date"/>
                <TextView
                    android:id="@+id/mmlv_tv_suburb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mm_tv_suburb"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RatingBar
                    android:id="@+id/mmlv_rb_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:isIndicator="true"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"/>
                <TextView
                    android:id="@+id/mmlv_tv_date_ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="watch date"/>
                <TextView
                    android:id="@+id/mmlv_tv_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mm_tv_suburb"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/mmlv_tv_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mm_tv_comment"/>
                <TextView
                    android:id="@+id/mmlv_tv_com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_tv_comment"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
